<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:paddingHorizontal="30dp"
    android:paddingVertical="20dp">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/logo_rotina_plus_v2"
        android:contentDescription="@string/app_logo_description"/>

    <LinearLayout
        android:id="@+id/layout_main_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/logo_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="30sp"
            android:textColorHint="@color/light_gray"
            android:textColor="@color/white"
            android:fontFamily="@font/poor_story_regular"
            android:background="@drawable/background_edit_text"
            android:padding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:letterSpacing=".1"/>

        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="30sp"
            android:textColorHint="@color/light_gray"
            android:textColor="@color/white"
            android:fontFamily="@font/poor_story_regular"
            android:background="@drawable/background_edit_text"
            android:layout_marginVertical="10dp"
            android:padding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:letterSpacing=".1"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:backgroundTint="@null"
            android:text="@string/login"
            android:fontFamily="@font/poor_story_regular"
            android:background="@drawable/btn"
            android:gravity="center"
            android:textSize="30sp"
            android:letterSpacing=".1"/>

        <TextView
            android:id="@+id/anchor_registry_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registry_anchor"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poor_story_regular"
            android:layout_marginTop="30dp"
            android:letterSpacing=".1"/>

        <TextView
            android:id="@+id/anchor_companie_registry_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/companie_registry_anchor"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poor_story_regular"
            android:layout_marginTop="10dp"
            android:letterSpacing=".1"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>