<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingHorizontal="30dp"
    android:paddingVertical="20dp">

    <ImageView
        android:id="@+id/back_arrow_registry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_back_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_registry"
        android:contentDescription="@string/arrow_back_description"/>

    <LinearLayout
        android:id="@+id/layout_registry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_registry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message_registry"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poor_story_regular"
            android:letterSpacing=".1"/>

        <TextView
            android:id="@+id/txt1_registry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_message_registry"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/green"
            android:fontFamily="@font/poor_story_regular"
            android:layout_marginVertical="97dp"
            android:letterSpacing=".1"/>

        <TextView
            android:id="@+id/txt2_registry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/directions_message_registry"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/dark_yellow"
            android:fontFamily="@font/poor_story_regular"
            android:letterSpacing=".1"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>